# trebuchet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.py  setup.py
src/: demo.cpp  gesture.cpp  gesture.hpp  gesture_recognizer.cpp  gesture_recognizer.hpp  touch_point.cpp  touch_point.hpp  vec2.cpp  vec2.hpp
src/gestures/: double_tap.cpp  double_tap.hpp  fling.cpp  fling.hpp  gesture.cpp  gesture.hpp  gesture_event.hpp  long_tap.cpp  long_tap.hpp  pinch.cpp  pinch.hpp  tap.cpp  tap.hpp
src/trebuchet/: application.cpp  application.hpp  bindings.cpp  gesture_recognizer.cpp  gesture_recognizer.hpp  touch_point.cpp  touch_point.hpp  utils.hpp  vec2.cpp  vec2.hpp
src/trebuchet/gestures/: double_tap.cpp  double_tap.hpp  fling.cpp  fling.hpp  gesture.cpp  gesture.hpp  gesture_event.cpp  gesture_event.hpp  long_tap.cpp  long_tap.hpp  pinch.cpp  pinch.hpp  swipe.cpp  swipe.hpp  tap.cpp  tap.hpp
src/trebuchet/recognizers/: fling_recognizer.cpp  fling_recognizer.hpp  long_tap_recognizer.cpp  long_tap_recognizer.hpp  pinch_recognizer.cpp  pinch_recognizer.hpp  recognizer.cpp  recognizer.hpp  swipe_recognizer.cpp  swipe_recognizer.hpp  tap_recognizer.cpp  tap_recognizer.hpp
